kubernetes/manifests/bunkerweb/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cilium-gateway-bunkerweb
  namespace: bunkerweb
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-gateway-system
  to:
    - group: ""
      kind: Service
