kubernetes/manifests/bunkerweb/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-bunkerweb
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bunkerweb
      app.kubernetes.io/instance: bunkerweb
      bunkerweb.io/component: "api"
  template:
    metadata:
      labels:
        helm.sh/chart: bunkerweb-1.0.16
        app.kubernetes.io/name: bunkerweb
        app.kubernetes.io/instance: bunkerweb
        app.kubernetes.io/version: "1.6.9"
        app.kubernetes.io/managed-by: Helm
        bunkerweb.io/component: "api"
    spec:
      containers:
        - name: bunkerweb-api
          image: docker.io/bunkerity/bunkerweb-api:1.6.9
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 101
            runAsUser: 101
          livenessProbe:
            exec:
              command:
                - /usr/share/bunkerweb/helpers/healthcheck-api.sh
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - name: wildcard-tls
              mountPath: /etc/ssl/bunkerweb
              readOnly: true
      volumes:
        - name: wildcard-tls
          secret:
            secretName: wildcard-nullservers-tls
