kubernetes/manifests/bunkerweb/bunkerweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bunkerweb
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bunkerweb
      app.kubernetes.io/instance: bunkerweb
      bunkerweb.io/component: "bunkerweb"
  template:
    metadata:
      annotations:
        # mandatory annotation
        bunkerweb.io/INSTANCE: "yes"
      labels:
        helm.sh/chart: bunkerweb-1.0.16
        app.kubernetes.io/name: bunkerweb
        app.kubernetes.io/instance: bunkerweb
        app.kubernetes.io/version: "1.6.9"
        app.kubernetes.io/managed-by: Helm
        bunkerweb.io/component: "bunkerweb"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    bunkerweb.io/component: "bunkerweb"
      containers:
        # using bunkerweb as name is mandatory
        - name: bunkerweb
          image: docker.io/bunkerity/bunkerweb:1.6.9
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 101
            runAsUser: 101
          ports:
            - containerPort: 5000
              name: bwapi
            - containerPort: 8080
            - containerPort: 8443
          livenessProbe:
            exec:
              command:
                - /usr/share/bunkerweb/helpers/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
                - /usr/share/bunkerweb/helpers/healthcheck.sh
                - ok
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: wildcard-tls
              mountPath: /etc/ssl/bunkerweb
              readOnly: true
      volumes:
        - name: wildcard-tls
          secret:
            secretName: wildcard-nullservers-tls
