kubernetes/manifests/bunkerweb/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-bunkerweb
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bunkerweb
      app.kubernetes.io/instance: bunkerweb
      bunkerweb.io/component: "scheduler"
  template:
    metadata:
      labels:
        helm.sh/chart: bunkerweb-1.0.16
        app.kubernetes.io/name: bunkerweb
        app.kubernetes.io/instance: bunkerweb
        app.kubernetes.io/version: "1.6.9"
        bunkerweb.io/component: "scheduler"
    spec:
      serviceAccountName: bunkerweb
      containers:
        - name: bunkerweb-scheduler
          image: docker.io/bunkerity/bunkerweb-scheduler:1.6.9
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 101
            runAsUser: 101
          livenessProbe:
            exec:
              command:
                - /usr/share/bunkerweb/helpers/healthcheck-scheduler.sh
            failureThreshold: 3
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 1
