kubernetes/manifests/bunkerweb/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-bunkerweb
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    bunkerweb.io/component: "api"
  ports:
    - name: api-external
      protocol: TCP
      port: 8888
      targetPort: 8888
