kubernetes/manifests/bunkerweb/bunkerweb-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: bunkerweb-external
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    bunkerweb.io/component: "bunkerweb"
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
