kubernetes/manifests/bunkerweb/bunkerweb-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: bunkerweb-internal
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    bunkerweb.io/component: "bunkerweb"
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
