kubernetes/manifests/bunkerweb/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-bunkerweb
  namespace: bunkerweb
  labels:
    helm.sh/chart: bunkerweb-1.0.16
    app.kubernetes.io/name: bunkerweb
    app.kubernetes.io/instance: bunkerweb
    app.kubernetes.io/version: "1.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    bunkerweb.io/component: "ui"
  ports:
    - name: http
      protocol: TCP
      port: 7000
      targetPort: 7000
