kubernetes/manifests/bunkerweb/bunkerweb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bunkerweb-gateway
  namespace: bunkerweb
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-wildcard
      hostname: "*.nullservers.com"
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-nullservers-tls
            kind: Secret
            namespace: bunkerweb
      allowedRoutes:
        namespaces:
          from: All
