kubernetes/manifests/bunkerweb/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bunkerweb-ui-http-route
  namespace: bunkerweb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bunkerweb.nullservers.com
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium-gateway-system
      sectionName: https-wildcard
  hostnames:
    - "bunkerweb.nullservers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ui-bunkerweb
          port: 7000
