kubernetes/manifests/bunkerweb/httproute-bunkerweb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bunkerweb-gateway-route
  namespace: bunkerweb
spec:
  parentRefs:
    - name: bunkerweb-gateway
      namespace: bunkerweb
      sectionName: https-wildcard
  hostnames:
    - "photos.nullservers.com"
  rules:
    - backendRefs:
        - name: bunkerweb-internal
          port: 8080
